Fix color of links to a more readable color

--- a/src/index.css
+++ b/src/index.css
@@ -323,3 +323,7 @@ pre {
     flex-shrink: 0; /* Prevents shrinking */
 }
 
+a {
+  color: #00735c;
+}
+
